--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "eslint --ext .ts --ext .tsx  src/",
     "lint-demo": "eslint --ext .ts --ext .tsx demo/src/",
     "lint-all": "yarn lint && yarn lint-demo",
+    "prepare": "husky install",
     "clean-install": "rm -rf node_modules && yarn",
     "build": "tsc -p tsconfig.json",
     "copy-files": "cp -R ./src/images ./dist/images/",
